@@ -1,3 +1,12 @@
+2002-03-14  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* win/tclWinFCmd.c (DoRenameFile, DoCopyFile): Handle
+	an SEH exception with EXCEPTION_EXECUTE_HANDLER instead
+	of restarting the faulting instruction with
+	EXCEPTION_CONTINUE_EXECUTION. Bug 466102 provides an
+	example of how restarting could send Tcl into an
+	infinite loop. [Patch 525746]
+
 2002-03-11  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* win/tclWinFCmd.c (DoRenameFile, DoCopyFile, DoDeleteFile,
